Don't display chart on small devices.

--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -63,7 +63,7 @@
 @if (results.NumberOfSailedRaces > 1)
 {
 <br />
-<div class="container">
+<div class="container d-none d-lg-inline">
     <div class="row">
         <div class="col-12">
             <svg id="chart"></svg>
