Updates for home pages

--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -6,6 +6,27 @@
     @ViewData["Title"]
 </h3>
 <h3>
+    October 13th, 2019 Update
+</h3>
+<h5>Release Notes</h5>
+<em>Series Charts</em>
+    <p>
+        Series with more than one race can show a chart with the trend of competitors' rankings.
+    </p>
+<h3>
+    Spetember 3rd, 2019 Update
+</h3>
+<h5>Release Notes</h5>
+<p>
+    Regatta support: a regatta is featured on the front page for a week before and after the event, and
+    is highlighted on the club home page for three weeks before and after the event.
+</p>
+<p>
+    A regatta will have fleets of competitors different from the usual club fleets, and will show
+    competitors' home clubs.
+</p>
+
+<h3>
     August 16th, 2019 Update
 </h3>
 <h5>Release Notes</h5>
