--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -28,12 +28,12 @@
 <h3>Future</h3>
 We're working on new features, including:
 <ul>
-    <li>Support for a regatta: different scoring system than the club's usual, and show event competitor lists.</li>
     <li>Integration with social media, such as automatic posting of results to Twitter.</li>
     <li>Fields to track race conditions, with analysis for competitors in different conditions.</li>
     <li>Import and Export to integrate with existing scoring software.</li>
-    <li>Export a series to CSV or HTML so it can be posted on other sites.</li>
+    <li>Export a series to PDF or HTML so it can be posted on other sites.</li>
     <li>Result trend reporting: Are your races growing?</li>
+    <li>More options for result entry: apps for phones.</li>
 </ul>
 <p>View the full list of issues and feature requests at <a href="https://github.com/jbfraser1/SailScores/issues">GitHub</a></p>
 <br />
