--- a/SailScores.Web/Views/Admin/_FleetList.cshtml
+++ b/SailScores.Web/Views/Admin/_FleetList.cshtml
@@ -11,8 +11,7 @@
         <div id="collapseFleets" class="collapse" aria-labelledby="fleetsHeading" data-parent="#accordion">
             <div class="card-body">
                 <p>
-                    Fleets group boats that should be scored against each other. A race only
-                    includes boats from a single fleet. But competitors can belong to
+                    Fleets group boats that race against each other. Competitors can belong to
                     multiple fleets.
                 </p>
                 <p>
