--- a/SailScores.Web/Views/BoatClass/Create.cshtml
+++ b/SailScores.Web/Views/BoatClass/Create.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h2>Create a new class</h2>
-
+<h4>A type of boat, such as MC Scow or Dragonforce 65</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -19,6 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
+                <span class="small"><i>Optional</i></span>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
