--- a/SailScores.Web/Views/BoatClass/Delete.cshtml
+++ b/SailScores.Web/Views/BoatClass/Delete.cshtml
@@ -8,6 +8,7 @@
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this class?</h3>
+<div class="alert alert-warning">Removing this class will delete any competitors associated with this class of boat!</div>
 <div>
     <hr />
     <dl class="dl-horizontal">
