--- a/SailScores.Web/Views/Club/Index.cshtml
+++ b/SailScores.Web/Views/Club/Index.cshtml
@@ -35,6 +35,17 @@
         </div>
     </div>
 }
+@if (Model.CanEdit && (Model.Races?.Count() ?? 0) == 0)
+{
+    <div class="row bg-light">
+        <div class="col-12">
+            <h4>
+                Follow the steps on the
+                <a asp-controller="Admin" asp-action="Index">Admin page</a> to set up this club.
+            </h4>
+        </div>
+    </div>
+}
 @if (Model.CurrentRegattas.Any())
 {
     <div class="row">
