--- a/SailScores.Web/Views/Season/Create.cshtml
+++ b/SailScores.Web/Views/Season/Create.cshtml
@@ -15,6 +15,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
+                <span class="small">Usually named after the year, such as @DateTime.UtcNow.Year </span>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
