Add Inactive note to admin competitor list

--- a/SailScores.Web/Views/Admin/_CompetitorList.cshtml
+++ b/SailScores.Web/Views/Admin/_CompetitorList.cshtml
@@ -28,6 +28,9 @@
                                 <em>@Html.DisplayFor(modelItem => item.BoatName)</em>
                             </td>
                             <td>
+                                @(item.IsActive ? "" : "Inactive")
+                            </td>
+                            <td>
                                 @Html.DisplayFor(modelItem => item.Notes)
                             </td>
                             <td>
