Add comp working, but needs a little more
needs loading spinner
needs fleet add.
loading spinner


WIP: add fleet

Don't forget resize bug
Comp create on Race edit

--- a/SailScores.Web/custom.scss
+++ b/SailScores.Web/custom.scss
@@ -128,3 +128,11 @@ button.close {
 svg text {
     font-family: "Open Sans", "Segoe UI", sans-serif;
 }
+
+.bottom-column {
+    width: 90%;
+    position: absolute;
+    left: 5%;
+    bottom: 0;
+}
+
