--- a/SailScores.Web/Views/Race/Edit.cshtml
+++ b/SailScores.Web/Views/Race/Edit.cshtml
@@ -31,7 +31,7 @@
                 <option selected="selected">Select a fleet...</option>
                 @foreach (var fleet in Model.FleetOptions)
                 {
-                    <option value="@fleet.Id">
+                    <option value="@fleet.Id" data-boat-class-id="@(fleet.BoatClasses?.Count == 1 ? fleet.BoatClasses[0].Id.ToString():"")">
                         @fleet.Name
                     </option>
                 }
@@ -149,6 +149,16 @@
                     <input id="newCompetitor" type="text" class="form-control" />
                 </div>
             </div>
+            <div class="col-lg-2"></div>
+            <div class="col-lg-3">
+                <div class="form-group bottom-column">
+                    <div class="form-group bottom-column">
+                        <div class="">
+                            <input id="createCompButton" type="button" value="Create New Competitor" class="btn btn-outline-primary btn-block" data-toggle="modal" data-target="#createCompetitor" />
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <hr />
         <div class="row">
@@ -184,13 +194,13 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
                 <form>
                     <div class="form-group">
-                        <p> Delete the result for <span id="competitorNameToDelete"></span>?</p>
-                    </div>
-                    <input id="compIdToDelete" type="hidden" />
-                </form>
+                        <div class="modal-body">
+                            <p> Delete the result for <span id="competitorNameToDelete"></span>?</p>
+                        </div>
+                        <input id="compIdToDelete" type="hidden" />
+</form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
@@ -200,6 +210,65 @@
     </div>
 </div>
 
+<div class="modal fade" id="createCompetitor" tabindex="-1" role="dialog" aria-labelledby="createCompetitorLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="createCompetitorLabel">Create competitor?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div id="compCreateAlert" class="alert alert-danger alert-dismissible collapse" role="alert">
+                <strong>Oops.</strong> Creating the competitor failed. Are the fields all filled in?
+                <button type="button" class="close" onclick="window.SailScores.hideAlert()" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form id="compform"
+                  method="post" class="col-12" data-ajax="true" data-ajax-method="post"
+                  data-ajax-url="@Url.Action("Create", "Competitor")"
+                  data-ajax-loading="#compLoading"
+                  data-ajax-failure="window.SailScores.completeCompCreateFailed"
+                  data-ajax-success="window.SailScores.completeCompCreate">
+                <div class="modal-body">
+
+                    <input type="text" name="IsActive" value="true" hidden />
+                    <input type="text" id="createCompFleetId" name="fleetIds[0]" hidden />
+                    <div class="form-group">
+                        <label class="control-label">Name <em>Required</em></label>
+                        <input name="name" type="text" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label name="sailNumber" class="control-label">Sail Number <em>Required</em></label>
+                        <input name="SailNumber" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label name="BoatClassId" class="control-label">Class <em>Required</em></label>
+                        <select id="createCompBoatClassSelect" name="BoatClassId" class="form-control">
+                            <option selected="selected">Select a class...</option>
+                            @foreach (var boatclass in Model.CompetitorBoatClassOptions)
+                            {
+                                <option value="@boatclass.Id">
+                                    @boatclass.Name
+                                </option>
+                            }
+                        </select>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-primary">
+                        <span class="spinner-border spinner-border-sm" id="compLoading" role="status" aria-hidden="true" style="display:none;">
+                            <span class="sr-only">Loading...</span>
+                        </span>
+                        Add
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 @section PreFooter {
     <footer class="footer score-entry" id="scoreButtonFooter" style="display: none;">
         <div class="container footer-header">
@@ -218,6 +287,7 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
     <script src="~/vendor/bootstrap-select/js/bootstrap-select.min.js"></script>
     <script src="~/js/raceEditor.build.js"></script>
     <script src="~/vendor/devbridge-autocomplete/jquery.autocomplete.js"></script>
